<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dataBattery"
            type="com.tuxdev.batterynotifplus.data.DataBattery" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.battery.BatteryActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_size"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <com.google.android.material.circularreveal.CircularRevealRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_header"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/header_size"
                        android:scaleType="centerCrop" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dimen100"
                        android:padding="@dimen/default_margin"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_extra_large" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/default_margin"
                        android:padding="@dimen/default_margin"
                        android:src="@drawable/ic_settings"
                        android:tint="@color/white" />

                    <com.tuxdev.batterynotifplus.widget.WaveLoadingView
                        android:id="@+id/battery_wave"
                        android:layout_width="@dimen/wave_size"
                        android:layout_height="@dimen/wave_size"
                        android:layout_below="@+id/tv_status"
                        android:layout_centerHorizontal="true"
                        app:wlv_borderColor="?android:windowBackground"
                        app:wlv_titleCenterSize="@dimen/text_size_extra_large"
                        app:wlv_titleCenterStrokeColor="@color/green"
                        app:wlv_wave_background_Color="?android:windowBackground" />
                </com.google.android.material.circularreveal.CircularRevealRelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-16dp"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/default_margin"
                    android:paddingRight="@dimen/default_margin">


                    <!--Battery Status-->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="@dimen/dimen300"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/colorPrimary"
                        android:gravity="center"
                        android:padding="@dimen/default_margin_half"
                        android:text="@string/title_status"
                        android:textColor="?android:windowBackground"
                        android:textSize="@dimen/text_size_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/default_margin"
                        android:paddingTop="@dimen/default_margin_half"
                        android:paddingEnd="@dimen/default_margin_half"
                        android:text="@{@string/status_health(dataBattery.health)}"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="@dimen/dimen300"
                        android:layout_height="0.3dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin_half"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        android:background="@color/gray" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/default_margin"
                        android:paddingEnd="@dimen/default_margin_half"
                        android:text="@{@string/status_volt(dataBattery.batteryVolt)}"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="@dimen/dimen300"
                        android:layout_height="0.3dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin_half"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        android:background="@color/gray" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/default_margin"
                        android:paddingEnd="@dimen/default_margin_half"
                        android:paddingBottom="@dimen/default_margin_half"
                        android:text="@{@string/status_tmp(dataBattery.batteryTmp)}"
                        android:textSize="@dimen/text_size_medium" />

                    <!--Battery Capacity-->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="@dimen/dimen300"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/colorPrimary"
                        android:gravity="center"
                        android:padding="@dimen/default_margin_half"
                        android:text="@string/title_capacity"
                        android:textColor="?android:windowBackground"
                        android:textSize="@dimen/text_size_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/default_margin"
                        android:paddingTop="@dimen/default_margin_half"
                        android:paddingEnd="@dimen/default_margin_half"
                        android:text="@{@string/design_capacity(dataBattery.designCapacity)}"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="@dimen/dimen300"
                        android:layout_height="0.3dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin_half"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        android:background="@color/gray" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/default_margin"
                        android:paddingEnd="@dimen/default_margin_half"
                        android:paddingBottom="@dimen/default_margin_half"
                        android:text="@{dataBattery.currentCapacity.equals(`-`) ? @string/current_capacity_null(`-`):  @string/current_capacity(dataBattery.currentCapacity,dataBattery.batteryHealth) }"
                        android:textSize="@dimen/text_size_medium" />

                    <!--Battery Information-->

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="@dimen/dimen300"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/colorPrimary"
                        android:gravity="center"
                        android:padding="@dimen/default_margin_half"
                        android:text="@string/title_information"
                        android:textColor="?android:windowBackground"
                        android:textSize="@dimen/text_size_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/default_margin"
                        android:paddingTop="@dimen/default_margin_half"
                        android:paddingEnd="@dimen/default_margin_half"
                        android:text="@{@string/information_tech(dataBattery.technology)}"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="@dimen/dimen300"
                        android:layout_height="0.3dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin_half"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        android:background="@color/gray" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/default_margin"
                        android:paddingEnd="@dimen/default_margin_half"
                        android:text="@{@string/status_cycle_count(dataBattery.cycleCount)}"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="@dimen/dimen300"
                        android:layout_height="0.3dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        android:background="@color/gray" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/default_margin"
                        android:paddingEnd="@dimen/default_margin_half"
                        android:text="@{@string/information_uptime(dataBattery.timeBoot)}"
                        android:textSize="@dimen/text_size_medium" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.core.widget.NestedScrollView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/banner_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>